# Realtime-Binding-of-Isaac-Item-Detector

./: .gitignore  .pre-commit-config.yaml  README.md  dumped_isaac_items.json  pyproject.toml  requirements.txt
docs/: constants.html  genindex.html  image_processing.html  index.html  isaac_web_app.html  isaac_yolo.html  modules.html  objects.inv  py-modindex.html  scraping.html  search.html  searchindex.js  setup_everything.html  utils.html
docs/_modules/: index.html  setup_everything.html  utils.html
docs/_modules/image_processing/: data_augmentor.html  image_overlay_processor.html  isaac_live_capture_handler.html  screen_grabber.html
docs/_modules/isaac_yolo/: isaac_yolo_dataset_generator.html  isaac_yolo_model.html
docs/_modules/scraping/: isaac_item.html  scraper.html
docs/_sources/: generate_augmented_items.rst.txt  image_processing.rst.txt  index.rst.txt  isaac_web_app.rst.txt  isaac_yolo.rst.txt  setup_everything.rst.txt
docs/doctrees/: constants.doctree  environment.pickle  generate_augmented_items.doctree  image_processing.doctree  index.doctree  isaac_web_app.doctree  isaac_yolo.doctree  logging_config.doctree  modules.doctree  scraping.doctree  setup_everything.doctree  utils.doctree
docs/html/: .buildinfo  generate_augmented_items.html  genindex.html  image_processing.html  isaac_web_app.html  isaac_yolo.html  logging_config.html  objects.inv  py-modindex.html  scraping.html
docs/html/_modules/: generate_augmented_items.html  index.html  logging_config.html
docs/html/_modules/image_processing/: augmentation.html  bbox.html  image_overlay_processor.html
docs/html/_modules/isaac_yolo/: isaac_yolo_dataset_generator.html
docs/html/_modules/scraping/: isaac_item.html
isaac_backgrounds/: README.md
model_training_results/: results.csv
source/: conf.py  image_processing.rst  isaac_web_app.rst  isaac_yolo.rst  modules.rst  scraping.rst
src/: constants.py  generate_augmented_items.py  generate_dataset.py  isaac_yolo_model_training.ipynb  logging_config.py  setup_everything.py  utils.py
src/data_augmentation/: augmentation.py  data_augmentor.py
src/image_processing/: bbox.py  data_augmentor.py  image_overlay_processor.py  isaac_live_capture_handler.py  screen_grabber.py
src/isaac_web_app/: app.py
src/isaac_web_app/static/: script.js  styles.css
src/isaac_web_app/templates/: index.html
src/isaac_yolo/: isaac_yolo_dataset_generator.py  isaac_yolo_model.py
src/model/: isaac_yolo_dataset_generator.py
src/scraping/: isaac_item.py  scraper.py
test/: logging_config_test.py
test/image_processing/: bbox_test.py  data_augmentor_test.py  screen_grabber_test.py
